# niltest

./: .gitignore  CNAME  CONTRIBUTING.md  PYPI.md  README.ja.md  README.md  SECURITY.md  benchmark_production.py  index.html  main.py  niltest.py  niltest_pytest.py  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  docs.yml
_astro/: CodeBlock.BOJ1eRUA.css  CodeBlock.D6sMupR7.css  index.Cy603kub.css
assets/: CodeBlock.n-yMRCdi.css
docs/: README.en.md  README.md  ai-context.json  api.en.md  api.md  concepts.en.md  concepts.md  i18n.md  index.html  modes.en.md  modes.md
docs-site/: astro.config.mjs  package.json
docs-site/.astro/: dev.json  settings.json
docs-site/public/: CNAME
docs-site/public/docs/: ai-context.json  ai-context.schema.json
docs-site/src/components/: CodeBlock.astro  DocContent.astro  InstallCommand.astro
docs-site/src/content/: pages.ts
docs-site/src/layouts/: DocsLayout.astro
docs-site/src/lib/: urls.ts
docs-site/src/locales/: index.ts
docs-site/src/locales/catalogs/: _template.ts  en.ts  ja.ts
docs-site/src/pages/: index.astro
docs-site/src/pages/docs/: [slug].astro  index.astro
docs-site/src/pages/docs/[lang]/: [slug].astro  index.astro
docs-site/src/pages/en/: index.astro
docs-site/src/styles/: global.css
docs/api/: index.html
docs/async/: index.html
docs/concepts/: index.html
docs/en/: index.html
docs/en/api/: index.html
docs/en/async/: index.html
docs/en/concepts/: index.html
docs/en/expectations/: index.html
docs/en/getting-started/: index.html
docs/en/localization/: index.html
docs/en/mocking/: index.html
docs/en/production/: index.html
docs/en/recipes/: index.html
docs/en/testing/: index.html
docs/expectations/: index.html
docs/getting-started/: index.html
docs/localization/: index.html
docs/mocking/: index.html
docs/production/: index.html
docs/recipes/: index.html
docs/testing/: index.html
en/: index.html
examples/: 01_basic_usage.py  02_dataclass_pydantic.py  03_random_and_validators.py  04_async_support.py  05_declared_zero_runtime.py  06_pydantic_types_and_inspect.py  07_exception_specs.py  08_inspect_report.py  08_inspect_report.result.ja.md  08_inspect_report.result.md  __init__.py  demo.py
niltest/: __init__.py  _case.py  _cli.py  _compare.py  _config.py  _declared.py  _docgen.py  _expect.py  _i18n.py  _inspect.py  _result.py  _scenario.py  _typing.py
niltest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
niltest/locales/: __init__.py  en.py  ja.py  template.py
tests/: test_declared.py  test_exceptions.py  test_i18n.py  test_language_detection.py  test_niltest.py  test_pytest_plugin.py  test_results_and_cli.py  test_typing_and_inspect.py
