[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "niltest"
version = "0.1.0"
description = "本番環境でのオーバーヘッドがゼロの仕様可視化・モック・テストライブラリ"
authors = [
    {name = "Disnana", email = "support@disnana.com"}
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pydantic>=2.0"
]
