[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "niltest"
version = "1.0.0"
description = "Executable specifications, mocks, and lightweight tests next to your Python code"
readme = {file = "PYPI.md", content-type = "text/markdown"}
license = "MIT"
authors = [
    {name = "Disnana", email = "support@disnana.com"}
]
requires-python = ">=3.10"
dependencies = []
keywords = ["testing", "mock", "specification", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://niltest.disnana.com/"
Documentation = "https://niltest.disnana.com/docs/"
Repository = "https://github.com/disnana/niltest/"
Issues = "https://github.com/disnana/niltest/issues"

[project.scripts]
niltest = "niltest._cli:main"

[tool.setuptools.packages.find]
include = ["niltest*", "examples*"]

[tool.setuptools.package-data]
niltest = ["py.typed"]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.14",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "pydantic>=2.0",
    "ruff>=0.9",
    "twine>=6.0"
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["LOCAL", ".venv", ".verify-venv", "dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
exclude = "^(LOCAL|docs-site|build|dist)/"
